# trade

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: windows-ci.yml
configs/: default.yaml
cryptoai/: __init__.py  cli.py  main.py
cryptoai/adaptive/: __init__.py  validation.py
cryptoai/backtesting/: __init__.py  engine.py  metrics.py  professional_engine.py  risk_metrics.py  simulator.py  validation.py
cryptoai/black_swan/: __init__.py  anomaly.py  cascade.py  detector.py  tail_risk.py
cryptoai/data_universe/: __init__.py  aggregator.py  base.py  multi_resolution.py  price_feed.py
cryptoai/data_universe/asset_registry/: __init__.py  registry.py
cryptoai/data_universe/derivatives/: __init__.py  features.py  funding.py  liquidations.py  open_interest.py
cryptoai/data_universe/events/: __init__.py  processor.py  types.py
cryptoai/data_universe/market_microstructure/: __init__.py  features.py  orderbook.py  trades.py
cryptoai/data_universe/onchain/: __init__.py  features.py  flows.py  whale_tracker.py
cryptoai/decision_engine/: __init__.py  action_space.py  meta_controller.py  policy.py  reward.py
cryptoai/deployment/: __init__.py  model_server.py  orchestrator.py  rollout.py
cryptoai/encoders/: __init__.py  asset.py  base.py  derivatives.py  events.py  liquidity.py  onchain.py  order_flow.py  regime.py  unified.py
cryptoai/execution/: __init__.py  exchange_client.py  executor.py  order_manager.py
cryptoai/governance/: __init__.py
cryptoai/monitoring/: __init__.py  alerting.py  dashboard.py  drift_detector.py  metrics_collector.py
cryptoai/news/: __init__.py
cryptoai/risk_engine/: __init__.py  controller.py  cvar_position_sizer.py  kill_switch.py  position_sizer.py
cryptoai/training/: __init__.py  data_loader.py  ddp.py  encoder_trainer.py  experience_replay.py  policy_trainer.py  trainer.py  world_model_trainer.py
cryptoai/utils/: __init__.py  config.py  device.py  logging.py  reproducibility.py
cryptoai/world_model/: __init__.py  causal.py  latent_dynamics.py  temporal_transformer.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
electron/: package.json
electron-app/: README.md  main.js  package.json  preload.js
electron-app/assets/: ICON_README.md  installer.nsh
electron-app/renderer/: index.html  renderer.js  styles.css
electron/src/: index.html  main.js  preload.js  renderer.js  styles.css
scripts/: __init__.py  run_training.py
tests/: __init__.py  conftest.py  test_backtesting.py  test_black_swan.py  test_encoders.py  test_integration.py  test_price_feed.py  test_risk_engine.py  test_training.py  test_windows_compat.py
