[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoai"
version = "0.1.0"
description = "Autonomous Crypto-Native AI Trading Intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CryptoAI Team"}
]
keywords = ["crypto", "trading", "ai", "reinforcement-learning", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.36.0",
    "tiktoken>=0.5.0",
    "einops>=0.7.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "ccxt>=4.2.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "prometheus-client>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.9.0",
    "joblib>=1.3.0",
    "numba>=0.58.0",
    "bottleneck>=1.3.0",
    "optuna>=3.5.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "h5py>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.0.0",
]

[project.scripts]
cryptoai = "cryptoai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptoai*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
