[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoai"
version = "0.2.0"
description = "Autonomous Crypto-Native AI Trading Intelligence - Windows 11 Ready"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "CryptoAI Team"}
]
keywords = ["crypto", "trading", "ai", "reinforcement-learning", "deep-learning", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# =============================================================================
# WINDOWS 11 INSTALLATION (RECOMMENDED):
# 1. Install Python 3.11 from python.org
# 2. (Optional) Install CUDA 12.1+ from NVIDIA for GPU support
# 3. pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
#    OR for CPU only: pip install torch torchvision torchaudio
# 4. pip install -e .
#
# HARDWARE RECOMMENDATIONS:
# - GPU: NVIDIA RTX 3060+ (8GB+ VRAM) for training
# - RAM: 16GB minimum, 32GB recommended
# - CPU: 8+ cores recommended
# =============================================================================

dependencies = [
    # Core ML - PyTorch 2.2+ (stable Windows support)
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",

    # Numerical computing
    "numpy>=1.26.0,<2.0.0",  # NumPy 2.0 has breaking changes
    "pandas>=2.1.0",
    "polars>=0.20.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",

    # Deep learning utilities
    "transformers>=4.40.0",
    "tiktoken>=0.6.0",
    "einops>=0.7.0",
    # flash-attn is Linux-only, excluded on Windows - use scaled_dot_product_attention instead

    # Reinforcement learning
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",

    # Exchange connectivity
    "ccxt>=4.2.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",

    # Data storage (Windows-compatible versions)
    "redis>=5.0.0",
    "h5py>=3.10.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",

    # Configuration & validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",

    # Logging & monitoring
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "wandb>=0.16.0",
    "tensorboard>=2.16.0",
    "prometheus-client>=0.20.0",

    # API server
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.0",

    # Performance optimization (Windows-safe)
    "joblib>=1.3.0",
    "bottleneck>=1.3.0",

    # Hyperparameter optimization
    "optuna>=3.6.0",

    # Visualization
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",

    # Windows-specific utilities
    "colorama>=0.4.6",  # Windows terminal colors
    "pywin32>=306;platform_system=='Windows'",  # Windows API access
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "black>=24.3.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "ipython>=8.22.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.1.0",
]

# CUDA installation for NVIDIA GPUs (Windows & Linux)
cuda = [
    # Install with: pip install -e .[cuda] --index-url https://download.pytorch.org/whl/cu121
    "nvidia-cudnn-cu12>=8.9.0;platform_system!='Windows'",
]

# Linux-only optimizations (flash attention, etc.)
linux = [
    "flash-attn>=2.5.0;platform_system=='Linux'",
    "ninja>=1.11.0",
]

# Full installation with all optional dependencies
full = [
    "cryptoai[dev]",
    "cryptoai[cuda]",
]

[project.scripts]
cryptoai = "cryptoai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cryptoai*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
